--- a/FakeChmCreator/FakeChmCreator.csproj
+++ b/FakeChmCreator/FakeChmCreator.csproj
@@ -46,9 +46,12 @@
   <ItemGroup>
     <Compile Include="ChmContent.cs" />
     <Compile Include="ChmDocument.cs" />
+    <Compile Include="HtmlTreeLevel.cs" />
+    <Compile Include="IHtmlNodeContainer.cs" />
     <Compile Include="IOwnedItem.cs" />
-    <Compile Include="IOwnedItemList.cs" />
-    <Compile Include="OwnedItemListBase.cs" />
+    <Compile Include="IOwnedItemCollection.cs" />
+    <Compile Include="OwnedItemCollectionBase.cs" />
+    <Compile Include="PageContent.cs" />
     <Compile Include="PageSection.cs" />
     <Compile Include="Topic.cs" />
     <Compile Include="Page.cs" />
