--- a/FakeChmCreator/FakeChmCreator.csproj
+++ b/FakeChmCreator/FakeChmCreator.csproj
@@ -53,6 +53,7 @@
     <Compile Include="OwnedItemCollectionBase.cs" />
     <Compile Include="PageContent.cs" />
     <Compile Include="PageSection.cs" />
+    <Compile Include="SectionItem.cs" />
     <Compile Include="Topic.cs" />
     <Compile Include="Page.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
